2003-06-30  Mikhael Goikhman  <migo@homemail.com>

	* authors/authors2php:
	* authors/index.php:
	* news/news2php:
	* news/index.php:
	* faq/faq2php:
	* faq/index.php:
	renamed some directories/scripts and regenerated pages

	* regenerate_pages:
	new script to regenerate 3 pages at once

2003-06-12  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>

	* logo-competition/logos/Aric_Campling/index.php:
	* logo-competition/logos_new.php:
	Added logo.

2003-06-11  Mikhael Goikhman  <migo@homemail.com>

	* logo-competition/logos_new.php:
	added "More..." links to all submitter entries

	* logos/Phil_Harper/fvwmpower2-overview.png:
	added one overview logo

2003-06-11  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>

	* documentation/dev_cvs.php: 
	Fixed Typo.

	* logo-competition/logos/Ludovic_Recourchines/index.php:
	* logo-competition/logos_new.php:
	Added logos from Ludovic Recourchines.

2003-06-10  Mikhael Goikhman  <migo@homemail.com>

	* documentation/perllib/*.php:
	regenerated

	* download/index.php:
	restored links to tarballs

2003-06-08  Mikhael Goikhman  <migo@homemail.com>

	* logo-competition/logos/Aric_Campling/index.php:
	* logo-competition/logos/Aric_Campling/felineinside.png:
	added original (a bit larger) image

	* documentation/dev_modules.php:
	some small fixes in documentation

2003-06-08  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos_new.php: 
	* logo-competition/logos/Aric_Campling/index.php: 
	Added logos from Aric Campling.

2003-06-06  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>

	* index.php: 
	Put birthday statement in past. Might be removed at all.

	* web-theme/classes/birthday_class.inc: 
	Added referer link to the decoration to allow easier navigation.

	* logo-competition/logos/Stefan_Bergmeier/*: 
	* logo-competition/logos_new.php:
	Added logos from Stefan Bergmeier.
	
2003-06-04  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>

	* logo-competition/logos/Felix_E_Klee/index.php: 
	* logo-competition/logos_new.php: