@@ -1,3 +1,11 @@
+2003-07-01  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>
+
+	* logo-competition/logos_new.php: 
+	* logo-competition/logos/Tadashi_Hikone/*: 
+	* logo-competition/logos/Colin_May/*: 
+	* logo-competition/logos/Tian/logo_float*:
+	added logos
+	
 2003-06-30  Mikhael Goikhman  <migo@homemail.com>
 
 	* authors/authors2php:
